--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6133,4 +6133,44 @@ public decimal Normalize(decimal value, int scale)
 * **문제:** AI가 정보를 제공할 때 출처가 불분명하면 신뢰가 무너집니다.
 * **해결책:** AI가 정보를 어디서 가져왔는지 명확히 밝히는 **'출처 표기(Attribution)'**가 필수적입니다. 이는 정보를 생산한 인간 창작자에 대한 존중이자, 지속 가능한 AI 생태계를 위한 전제 조건입니다.
 
+## 25.12.11
 
+### [스택 메모리가 힙보다 훨씬 빠른 이유 (CPU가 메모리 관리하는 방식) - YouTube](https://www.youtube.com/watch?v=oR6e7IujXnU)
+
+- [Stack vs Heap Memory Allocation - GeeksforGeeks](https://www.geeksforgeeks.org/dsa/stack-vs-heap-memory-allocation/)
+
+#### **Key Differences Between Stack and Heap Allocations** 
+
+1.  In a stack, the allocation and de-allocation are **automatically** done by the compiler whereas, in heap, it needs to be done by the **programmer manually.**
+2.  Handling the Heap frame is **costlier** than handling the stack frame.
+3.  **Memory shortage** problem is more likely to happen in stack whereas the main issue in heap memory is **fragmentation.**
+4.  Stack **frame access is easier** than the heap frame as the stack has a small region of memory and is **cache-friendly** but in the case of heap frames which are dispersed throughout the memory so it causes more **cache misses.**
+5.  A stack is **not flexible**, the memory size allotted cannot be changed whereas a heap is flexible, and the allotted memory can be **altered.**
+6.  **Accessing** **time** of heap takes is more than a stack.
+
+#### **Comparison Chart**
+
+| Parameter                    | STACK                                                      | HEAP                                                                           |
+| ---                          | ---                                                        | ---                                                                            |
+| Basic                        | Memory is allocated in a contiguous block.                 | Memory is allocated in any random order.                                       |
+| Allocation and De-allocation | Automatic by compiler instructions.                        | Manual by the programmer (in C or C++ and garbage collector in Java or Python) |
+| Cost                         | Less                                                       | More                                                                           |
+| Implementation               | Easy                                                       | Hard                                                                           |
+| Main Issue                   | Shortage of memory                                         | Memory fragmentation                                                           |
+| Locality of reference        | Excellent                                                  | Adequate                                                                       |
+| Safety                       | Thread safe, data stored can only be accessed by the owner | Not Thread safe, data stored visible to all threads                            |
+| Flexibility                  | Fixed-size                                                 | Resizing is possible                                                           |
+| Data type structure          | Linear                                                     | Hierarchical                                                                   |
+| Preferred                    | Static memory allocation is preferred in an array.         | Heap memory allocation is preferred in the linked list.                        |
+| Size                         | Smaller than heap memory.                                  | Larger than stack memory.                                                      |
+
+**Summarized By Gemini**
+
+이 영상은 **스택 메모리가 힙 메모리보다 성능상 훨씬 빠른 이유**와 **CPU의 메모리 관리 방식**에 대해 설명하고 있습니다.
+
+**스택 메모리가 더 빠른 핵심 이유**
+
+* **자동화된 할당 및 해제**: 함수가 호출되면 지역 변수는 스택에 자동으로 할당되고, 함수가 종료되면 즉시 해제됩니다. 이 과정은 시스템에 의해 자동으로 관리되므로 매우 효율적입니다. [[00:33](http://www.youtube.com/watch?v=oR6e7IujXnU&t=33)]
+* **단일 CPU 명령 처리**: 스택의 메모리 할당과 해제는 스택 포인터를 이동시키는 단순한 동작으로, 보통 단 한 번의 CPU 명령으로 처리될 만큼 빠릅니다. 반면 힙 할당은 여러 명령을 거쳐야 하므로 본질적으로 더 느립니다. [[01:09](http://www.youtube.com/watch?v=oR6e7IujXnU&t=69)]
+* **컴파일 시점 주소 계산**: 스택 변수의 위치는 컴파일 시점에 스택 포인터를 기준으로 미리 계산할 수 있습니다. 덕분에 실행 중에는 이미 알고 있는 주소에 접근하기만 하면 되므로, 포인터 간접 참조가 필요한 힙보다 접근 속도가 빠릅니다. [[01:40](http://www.youtube.com/watch?v=oR6e7IujXnU&t=100)]
+* **CPU 캐시 효율성 (지역성)**: 스택 메모리는 연속된 공간에 할당되므로 데이터가 서로 모여 있어 CPU 캐시 적중률(Cache Hit)이 높습니다. 반면 힙은 메모리 공간에 흩어져 있어 캐시 미스(Cache Miss)가 발생하기 쉽습니다. [[02:37](http://www.youtube.com/watch?v=oR6e7IujXnU&t=157)]
