--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6174,3 +6174,188 @@ public decimal Normalize(decimal value, int scale)
 * **단일 CPU 명령 처리**: 스택의 메모리 할당과 해제는 스택 포인터를 이동시키는 단순한 동작으로, 보통 단 한 번의 CPU 명령으로 처리될 만큼 빠릅니다. 반면 힙 할당은 여러 명령을 거쳐야 하므로 본질적으로 더 느립니다. [[01:09](http://www.youtube.com/watch?v=oR6e7IujXnU&t=69)]
 * **컴파일 시점 주소 계산**: 스택 변수의 위치는 컴파일 시점에 스택 포인터를 기준으로 미리 계산할 수 있습니다. 덕분에 실행 중에는 이미 알고 있는 주소에 접근하기만 하면 되므로, 포인터 간접 참조가 필요한 힙보다 접근 속도가 빠릅니다. [[01:40](http://www.youtube.com/watch?v=oR6e7IujXnU&t=100)]
 * **CPU 캐시 효율성 (지역성)**: 스택 메모리는 연속된 공간에 할당되므로 데이터가 서로 모여 있어 CPU 캐시 적중률(Cache Hit)이 높습니다. 반면 힙은 메모리 공간에 흩어져 있어 캐시 미스(Cache Miss)가 발생하기 쉽습니다. [[02:37](http://www.youtube.com/watch?v=oR6e7IujXnU&t=157)]
+
+## 25.12.15
+
+### [Disks Lie: Building a WAL that actually survives](https://blog.canoozie.net/disks-lie-building-a-wal-that-actually-survives/)
+
+제레미 트레거나(Jeremy Tregunna)의 블로그 포스트 **"Disks Lie: Building a WAL that actually survives" (디스크는 거짓말을 한다: 실제로 살아남는 WAL 구축하기)**에 대한 핵심 내용 정리와 전문 번역입니다.
+
+#### 1\. 핵심 내용 정리 (Summary)
+
+이 글은 데이터베이스의 내구성(Durability)을 보장하는 핵심 요소인 **WAL(Write-Ahead Log, 쓰기 전 로그)**을 안정적으로 구현하는 방법을 다룹니다. 저자는 단순히 디스크에 `write()`를 호출하는 것만으로는 데이터 안전을 보장할 수 없으며, 디스크와 OS가 "거짓말"을 하기 때문에 방어적인 설계가 필요하다고 강조합니다.
+
+**핵심 문제점: 순진한 접근의 위험성**
+
+  * 단순한 파일 쓰기는 커널의 **페이지 캐시**에만 머물다 날아갈 수 있습니다.
+  * 디스크 펌웨어가 쓰기 성공을 보고해도 실제로는 기록되지 않았거나 손상될 수 있습니다(**잠재적 섹터 오류, LSE**).
+  * OS 스케줄러에 의해 쓰기 작업의 **순서가 뒤바뀔 수 있습니다**.
+
+**해결책: 5단계 방어 전략**
+
+1.  **체크섬(CRC32C):** 데이터가 디스크나 메모리 버스에서 조용히 손상(비트 플립 등)되는 것을 감지하기 위해 모든 레코드에 체크섬을 포함합니다.
+2.  **이중 WAL 파일(Dual WALs):** **잠재적 섹터 오류(LSE)**에 대비해 동일한 데이터를 두 개의 파일(가급적 다른 디스크)에 기록합니다. 하나가 손상되어도 복구할 수 있습니다.
+3.  **O\_DIRECT + O\_DSYNC:** 커널의 페이지 캐시를 우회하고, 데이터가 물리적 디스크에 기록될 때까지 기다리도록 강제하여 "진짜 내구성"을 확보합니다.
+4.  **연결된 I/O 순서 지정(io\_uring):** 리눅스의 `io_uring`을 사용하여 쓰기와 동기화(`fsync`) 작업 간의 순서를 강제하고, 경쟁 상태(Race Condition)를 방지합니다.
+5.  **검증 읽기(Verification Reads):** 쓰기 및 동기화 후, 데이터를 즉시 다시 읽어 체크섬을 확인함으로써 "조용한 실패"를 조기에 발견합니다.
+
+**결론**
+
+프로덕션 수준의 WAL은 "어떤 단일 하드웨어 장애에도 데이터는 살아남는다"는 계약과 같습니다. 이를 위해 디스크, 캐시, 펌웨어를 신뢰하지 않는 편집증적인 설계가 필요합니다.
+
+#### 2\. 전문 번역 (Full Translation)
+
+**당신의 디스크 스토리지를 잠재적 적대 관계로 취급하십시오.**
+
+WAL(Write-Ahead Log, 쓰기 전 로그)은 겉보기에만 간단해 보이는 데이터베이스 개념 중 하나입니다. 메모리 상의 상태를 변경하기 전에 먼저 디스크에 레코드를 기록합니다. 시스템이 충돌하면 로그를 다시 재생(replay)하여 복구합니다. 끝.
+하지만, 당신의 디스크가 당신에게 거짓말을 하고 있다는 점을 제외하면 말이죠.
+
+PostgreSQL, SQLite, RocksDB, Cassandra... 내구성(durability)을 주장하는 모든 프로덕션 시스템은 WAL에 의존합니다. 이것은 기본적인 계약입니다: "여기에 쓰세요. 그러면 데이터 생존을 보장합니다." 하지만 이 약속을 실제로 지키기 위해서는 디스크가 침묵 속에 실패하는 모든 방식을 이해해야 합니다.
+
+**순진한 접근법 vs 현실**
+
+당신이 WAL을 다음과 같이 구현한다고 가정해 봅시다.
+
+```c
+write(fd, record, sizeof(record)); // 됐어, 그렇지... 맞지?
+```
+
+노트북의 테스트 환경에서는 아주 잘 작동할 것입니다. 하지만 하루에 수백만 건의 쓰기를 처리하게 되면, 백만 분의 일 확률의 오류가 하루에도 여러 번 발생하게 됩니다. 이러한 시스템 중 일부는 테스트에서 절대 발견하지 못한 방식으로 실패할 것입니다.
+
+  * **페이지 캐시 문제:** 저 `write()` 호출은 데이터를 커널의 버퍼로 복사했을 뿐입니다. 아직 디스크는 건드리지도 않았습니다. 지금 충돌하면 데이터는 사라집니다.
+  * **성공에 대해 거짓말하는 디스크:** `write()`는 성공을 반환합니다. 커널은 동기화되었다고 말합니다. 디스크 펌웨어는 안정적인 저장소에 있다고 말합니다. 하지만 잠재적 섹터 오류(Latent Sector Error)가 조용히 데이터를 손상시킵니다.
+  * **순서의 혼란(Ordering Chaos):** 쓰기 작업 A가 시작됩니다. 쓰기 작업 B가 시작됩니다. B가 먼저 완료됩니다. 복구 코드는 A 없이 B만 보게 되고 무슨 일이 일어났는지 전혀 알 수 없습니다.
+  * **단일 장애 지점(SPOF):** WAL의 유일한 사본에 불량 섹터 하나만 생겨도 모든 것을 잃습니다.
+
+이것이 바로 프로덕션 환경에서 데이터를 잃어본 사람들이 내구성에 대해 편집증적인 태도를 보이는 이유입니다. 그리고 그럴 만도 합니다.
+
+**더 나은 쥐덫 만들기 (Building the Better Mousetrap)**
+
+우리가 사용할 수 있는 5가지 방어 계층이 있습니다. 이것들을 "이게 어떻게 실패할 수 있지?"라는 질문에 대한 점점 더 구체적인 대답이라고 생각하십시오.
+
+##### 1계층: 체크섬 (CRC32C)
+
+모든 레코드에는 내용에 대한 체크섬이 포함됩니다. 쓰기 후, 우리는 체크섬이 변경되지 않았는지 확인합니다. 간단하죠?
+
+```text
+Record Header (20 bytes):
+    [magic_num: 4][sequnce_num: 8][checksum: 4]
+    [payload: variable]
+    [padding to 512 byte alignment]
+```
+
+**이것이 중요한 이유:** 하드웨어 비트 플립(bit flip)은 발생합니다. 디스크 펌웨어는 데이터를 손상시킵니다. 메모리 버스는 오작동합니다. 그리고 결정타는 이렇습니다: 이 중 어느 것도 오류 플래그를 트리거하지 않습니다. I/O 서브시스템은 '성공'을 반환합니다. 데이터는 그저 조용히 잘못된 상태가 됩니다. 체크섬 없이는 나중에 복구를 시도하다가 로그가 쓰레기 값이라는 것을 발견할 때까지 몇 주 동안 이를 모를 수 있습니다.
+
+##### 2계층: 이중 WAL 파일 (LSE 보호)
+
+특정 유형의 실패, 즉 **잠재적 섹터 오류(LSE, Latent Sector Error)**를 방어하기 위한 또 다른 확실한 전략은 두 개의 WAL 파일을 유지하는 것입니다. 이상적으로는 서로 다른 디스크에 두는 것이 좋습니다.
+
+LSE는 디스크 섹터가 조용히 실패하는 경우입니다. `write()`는 성공을 반환합니다. `fsync()`도 성공을 반환합니다. 하지만 데이터는 말 그대로 거기에 없거나 손상되어 있습니다. 그러나 디스크는 당신에게 말해주지 않습니다. 그저 오래된 데이터를 반환하거나 쓰기를 조용히 누락시킵니다. 둘 다 매우 나쁜 상황입니다.
+
+구글의 프로덕션 장비 연구에 따르면 LSE는 꽤 정기적으로 발생하므로, 중요한 데이터의 사본을 하나만 두는 것은 신중하지 못한 것이 아니라 태만(negligence)입니다. 다른 연구들에서도 소비자용 및 기업용 드라이브가 각기 다른 비율로 실패하지만, 여전히 예상보다 높은 실패율을 보인다는 것을 보여줍니다.
+동일한 레코드를 두 파일에 씁니다. 검증 과정에서 한쪽의 손상을 감지하면, 다른 쪽이 버팀목이 되어줍니다.
+
+```text
+    WAL Primary        WAL Secondary
+    [Record 1]         [Record 1]
+    [Record 2]         [Record 2]
+    [Record 3]         [Record 3]
+    ...                ...
+```
+
+##### 3계층: O\_DIRECT + O\_DSYNC
+
+이것은 스스로에게 솔직해지는 것에 관한 문제입니다. 이 플래그들을 사용하지 않고 `write()`를 호출한다면, 당신은 방금 일어난 일에 대해 스스로에게 거짓말을 하고 있는 것입니다.
+
+  * **O\_DIRECT:** 커널의 페이지 캐시를 우회합니다. 커널이 버퍼링을 통해 당신을 도와주고 있다는 착각을 멈추십시오. 내구성이 필요할 때 버퍼링은 필요 없습니다. 당신은 데이터가 디스크에 있기를 원합니다. (주의: 리눅스의 모든 파일 시스템이 O\_DIRECT를 지원하는 것은 아닙니다.)
+  * **O\_DSYNC:** 동기식 쓰기입니다. 데이터가 실제로 디스크에서 안정화될 때까지 `write()`에서 반환되지 않습니다.
+
+이 둘을 합치면 이런 의미가 됩니다: "이게 더 느리다는 건 알아. 하지만 난 정말로 내구성을 신경 쓴다는 것도 알지."
+
+**이것이 중요한 이유:** 커널의 페이지 캐시는 읽기 중심의 작업 부하를 위한 성능 최적화입니다. WAL에게 그것은 부채(liability)입니다. 데이터는 RAM에 무기한 머물러 있습니다. 충돌(crash)이 발생하면 싹 사라집니다. 이 단계를 건너뛰는 애플리케이션들이 바로 프로덕션에서 자신들이 실제로는 내구성이 없다는 것을 발견하게 되는 애플리케이션들입니다.
+
+##### 4계층: 연결된 I/O 순서 지정 (리눅스의 io\_uring)
+
+이 글에서는 리눅스의 최신 비동기 I/O 구현체인 `io_uring`에 초점을 맞추겠습니다. 핵심적으로 `io_uring`은 두 개의 링 버퍼를 사용합니다: **제출 큐(submission queue)**(애플리케이션이 I/O 요청을 제출하는 곳)와 **완료 큐(completion queue)**(커널이 결과를 반환하는 곳). 이 설계는 컨텍스트 스위칭(context switch)과 시스템 호출 오버헤드를 줄여, 애플리케이션이 최소한의 CPU 사용으로 수천 개의 I/O 작업을 처리할 수 있게 합니다.
+
+(다른 운영체제들도 비슷한 목적의 최신 비동기 I/O 도구를 가지고 있지만, 독자의 연습 과제로 남겨두겠습니다.)
+
+우리의 경우, 작업 연결(operation linking) 기능이 있는 리눅스의 `io_uring`을 활용할 것입니다. 우리가 집중할 순서는 다음과 같습니다.
+
+1.  기본(Primary) 파일에 쓰기 제출
+2.  해당 쓰기에 `fsync` 연결 (`IOSQE_IO_LINK`)
+3.  `fsync`의 완료 큐 항목은 쓰기가 완료된 후에만 도착함
+4.  보조(Secondary) 파일에 대해 반복
+
+이것은 컨텍스트 스위칭 없이 순서 보장(ordering guarantee)을 생성합니다. 두 쓰기 작업 모두 애플리케이션에 제어권을 반환하기 전에 완료됩니다. 경쟁 상태(race condition)도, 재정렬(reordering)도 없습니다.
+
+```text
+Submit:    [Write Primary] -> [Fsync Primary] -> [Write Secondary] -> [Fsync Secondary]
+           (각 기본/보조 작업은 서로 연결되어 있음)
+
+Completes: Fsync Primary는 Write Primary를 기다림
+           Write Secondary는 Write & Fsync Primary 모두를 기다림
+           Fsync Secondary는 Write Secondary를 기다림
+```
+
+**이것이 중요한 이유:** 명시적인 순서 지정 없이는 커널 I/O 스케줄러가 작업을 재배치할 수 있습니다. 당신의 복구 코드는 A가 B보다 먼저 완료되었다고 가정하지만, 실제로는 B가 먼저 완료될 수 있습니다. 당신의 내구성 보장은 연기처럼 사라집니다.
+
+##### 5계층: fsync 후 검증 읽기 (Post-fsync Verification Reads)
+
+두 `fsync`가 모두 완료된 후, 우리는 방금 쓴 데이터를 정확히 다시 읽어(re-read) 체크섬을 검증해야 합니다. 이는 데이터가 신선할 때, 그리고 우리가 그것을 내구성 있다고 간주하기 전에 잠재적 섹터 오류를 즉시 감지합니다.
+
+검증이 실패하면, 대기 중인 보조 WAL이 있습니다.
+
+**이것이 중요한 이유:** 이것은 우리의 보험 증권입니다. 쓰기는 성공한 것처럼 보여도 조용히 손상될 수 있습니다. 다시 읽어서 검증해야만 중복성(redundancy)을 활용해 대비할 수 있는 타이밍에 이런 실패를 잡아낼 수 있습니다. 이것이 이중 WAL이 과잉 투자가 아니라 필수적인 이유이기도 합니다.
+
+**복구: 험프티 덤프티를 다시 조립하기...**
+
+험프티 덤프티는 망했을지 몰라도, 우리 데이터는 아닙니다.
+시스템이 재시작되면:
+
+1.  두 WAL 파일을 순차적으로 스캔하여 유효한 체크섬을 가진 모든 레코드를 수집합니다.
+2.  중복을 처리하며 레코드를 병합합니다 (기본과 보조 파일은 동일한 작업을 기록했습니다).
+3.  유효한 레코드의 가장 긴 연속 시퀀스를 찾습니다; 이것이 당신의 복구 시점입니다.
+4.  작업을 순서대로 재생(replay)하여 메모리 내 상태를 재구성합니다.
+
+이것은 다음을 보장합니다:
+
+  * 내구성 있게 커밋된 모든 작업이 재생됨
+  * 커밋되지 않은 작업이 실수로 포함되지 않음
+  * 하나의 WAL 파일이 부분적으로 손상되었더라도 일관된 지점으로 복구됨
+
+**이 모든 것이 왜 중요한가?**
+
+이것이 과잉 투자(overkill)라고 생각할 수도 있습니다. 당신의 사용 사례에 따라 그 말이 맞을 수도 있습니다. 취미 프로젝트라면 5개 계층이 모두 필요하지는 않을 것입니다. 하지만 실제 프로덕션 시스템의 두 가지 시나리오를 고려해 보십시오.
+
+**시나리오 1: 조용한 부패 (The Silent Corruption)**
+
+  * 당신의 WAL 쓰기가 완료됩니다.
+  * 48시간 후, 잠재적 섹터 오류가 발생합니다.
+  * 당신은 모릅니다. 디스크는 알려주지 않습니다. 체크섬은 복구를 시도할 때만 실패합니다.
+  * **이중 WAL 없음:** 데이터 손실. 애플리케이션이 내구성 약속을 위반했습니다.
+  * **이중 WAL + 검증:** 보조 WAL이 즉시 손상을 감지합니다. 복구가 정상적으로 진행됩니다. 데이터 손실 없음.
+
+**시나리오 2: 페이지 캐시의 놀라움 (The Page Cache Surprise)**
+
+  * 애플리케이션이 WAL에 씁니다.
+  * 커널이 성공을 반환합니다.
+  * 데이터는 페이지 캐시에 머뭅니다. 몇 초가 흐릅니다. 몇 분이 흐릅니다.
+  * 커널 충돌이 발생합니다 (드라이버 버그, OOM 핸들러 등).
+  * "쓰여졌다"는 그 모든 데이터는 실제로 디스크에 동기화된 적이 없습니다.
+  * **O\_DIRECT 없음:** 데이터 손실. 애플리케이션은 내구성이 있다고 생각했습니다.
+  * **O\_DIRECT 있음:** 데이터는 RAM에 머물지 않습니다. `fsync`가 반환되는 순간 디스크에 있습니다.
+
+이것들은 이론적인 실패가 아닙니다. 프로덕션 시스템에서 실제로 일어난 일들입니다. 일부는 뼈아픈 경험을 통해 배웠습니다. 다른 이들은 이에 대해 읽고 시스템을 제대로 구축했습니다.
+
+**결론**
+
+프로덕션 등급의 WAL은 단순한 코드가 아니라 **계약(contract)**입니다. 그 계약은: "이 레코드를 쓰면, 어떤 단일 하드웨어 장애에서도 살아남는 것을 보장하겠다"입니다. 그 계약을 이행하려면 다음이 필요합니다:
+
+  * **체크섬:** 손상 감지
+  * **중복성(Redundancy):** 구성 요소 장애 시 생존
+  * **O\_DIRECT + O\_DSYNC:** 데이터가 물리적 스토리지에 도달함을 보장
+  * **작업 연결(Operation linking):** 동시성을 잃지 않으면서 쓰기 순서 유지
+  * **검증 읽기:** 문제가 되기 전에 조용한 실패 포착
+
+계약을 정직하게 구축하십시오. 디스크는 거짓말을 합니다. 페이지 캐시는 거짓말을 합니다. 펌웨어에는 버그가 있습니다. 그리고 디스크 섹터는 조용히 실패합니다 (혹은 악의적으로 행동합니다). 제대로 된 WAL은 그들 중 누구도 신뢰하지 않습니다.
