--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6359,3 +6359,21 @@ Completes: Fsync Primary는 Write Primary를 기다림
   * **검증 읽기:** 문제가 되기 전에 조용한 실패 포착
 
 계약을 정직하게 구축하십시오. 디스크는 거짓말을 합니다. 페이지 캐시는 거짓말을 합니다. 펌웨어에는 버그가 있습니다. 그리고 디스크 섹터는 조용히 실패합니다 (혹은 악의적으로 행동합니다). 제대로 된 WAL은 그들 중 누구도 신뢰하지 않습니다.
+
+## 25.12.15
+
+### [Post-Quantum Cryptography in .NET - .NET Blog](https://devblogs.microsoft.com/dotnet/post-quantum-cryptography-in-dotnet/)
+
+- [Harvest now, decrypt later - Wikipedia](https://en.wikipedia.org/wiki/Harvest_now,_decrypt_later)
+
+- Harvest Now (지금 수집): 해커들은 지금 당장 암호를 풀 수 없어도, 인터넷상의 암호화된 패킷(HTTPS 트래픽 등)을 일단 닥치는 대로 저장하고 있습니다. 말씀하신 RSA나 **ECC(타원곡선암호)**가 주 타깃입니다.
+- Decrypt Later (나중 해독): 양자 컴퓨터가 실용화되면 **'쇼어 알고리즘(Shor's Algorithm)'**을 통해 기존 RSA 암호키를 순식간에 인수분해할 수 있게 됩니다. 그때 저장해둔 데이터를 꺼내서 내용을 보겠다는 것입니다.
+- 결론 (PQC, post-quantum-cryptography 도입): 따라서 **"데이터의 수명(유효기간)"**이 긴 정보(금융, 의료, 국가기밀 등)를 다루는 시스템은 양자 컴퓨터가 나오기 전인 '지금' 당장 PQC(양자 내성 암호)로 잠가야 안전하다는 결론입니다.
+
+1. Apple의 iMessage 'PQ3' 업그레이드 (가장 대표적)
+
+HNDL 위협이 얼마나 실제적인지 보여주는 가장 강력한 증거는 빅테크 기업들의 긴급한 방어 태세입니다.
+
+    상황: 2024년 2월, 애플은 iMessage에 새로운 암호화 프로토콜인 **'PQ3'**를 도입했습니다.
+
+    HNDL 관련성: 애플은 공식 보안 블로그를 통해 이 업데이트의 이유를 명확히 **"Harvest Now, Decrypt Later 시나리오에 대비하기 위함"**이라고 밝혔습니다.
