--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6377,3 +6377,56 @@ HNDL 위협이 얼마나 실제적인지 보여주는 가장 강력한 증거는
     상황: 2024년 2월, 애플은 iMessage에 새로운 암호화 프로토콜인 **'PQ3'**를 도입했습니다.
 
     HNDL 관련성: 애플은 공식 보안 블로그를 통해 이 업데이트의 이유를 명확히 **"Harvest Now, Decrypt Later 시나리오에 대비하기 위함"**이라고 밝혔습니다.
+
+## 25.12.17
+
+### [(1) 램값이 비쌀 때 쓰는 실전 노가다 자료구조 - YouTube](https://www.youtube.com/watch?v=rIl5G2aVfMQ)
+
+- [Bloom Filters - Introduction and Implementation - GeeksforGeeks](https://www.geeksforgeeks.org/python/bloom-filters-introduction-and-python-implementation/)
+
+**Summarized By Gemini**
+
+이 영상은 데이터베이스(DB)의 부하를 줄이고 메모리를 효율적으로 사용하면서 대량의 데이터를 빠르게 검색할 수 있는 **'블룸 필터(Bloom Filter)'**라는 자료 구조를 소개하고 있습니다.
+
+블룸 필터는 **"이 데이터가 절대 없음"** 혹은 **"아마도 있음"**을 아주 적은 메모리로 엄청나게 빠르게 알려주는 가성비 좋은 자료 구조입니다.
+
+#### [요약] 블룸 필터 (Bloom Filter)
+
+##### 1. 블룸 필터란?
+
+* **정의:** 대량의 데이터를 0과 1의 비트(Bit) 배열로 압축(짜부)하고 겹쳐서 저장하여, 특정 데이터가 존재하는지 확률적으로 검사하는 공간 효율적인 자료 구조입니다.
+* **목적:** DB 부하를 줄이고 검색 속도를 비약적으로 높이며, 메모리 사용량을 최소화하기 위해 사용합니다.
+
+##### 2. 작동 원리
+
+1. **비트 배열 준비:** 0과 1을 저장할 수 있는 칸(비트)을 여러 개(예: 10개) 준비합니다.
+2. **해시 함수 사용:** 여러 개의 해시 함수(입력값을 특정 숫자로 변환하는 함수)를 준비합니다.
+3. **저장 과정:**
+* 저장할 데이터(예: '피카츄')를 해시 함수들에 통과시켜 나온 숫자들에 해당하는 비트 칸을 '1'로 마킹합니다.
+* 다른 데이터(예: '파이리')도 동일하게 비트를 마킹하되, 이미 '1'인 자리는 덮어씁니다(겹쳐서 저장).
+
+
+4. **검색 과정:**
+* 검색할 데이터(예: '글레이시온')를 똑같은 해시 함수들에 통과시켜 나온 위치의 비트들이 모두 '1'인지 확인합니다.
+* 해당 위치가 모두 '1'이면 데이터가 존재한다고 판단합니다.
+* 비트 연산(Bitwise Operation)을 사용하므로 CPU 처리 속도가 매우 빠릅니다.
+
+##### 3. 장점과 단점
+
+* **장점:**
+* **속도:** 검색 속도가 매우 빠릅니다 (O(k), k는 해시 함수 개수).
+* **공간 효율:** 실제 데이터를 저장하지 않고 비트만 저장하므로 메모리 사용량이 획기적으로 적습니다.
+
+* **단점 (치명적):**
+* **거짓 양성 (False Positive):** 데이터가 **'없다'는 확실하게 판단**할 수 있지만, **'있다'고 판단될 때는 틀릴 수 있습니다.**
+* *예시:* 저장하지 않은 데이터('꼬북이')의 해시 결과가 우연히 다른 데이터들이 마킹해 놓은 '1'의 위치들과 겹칠 경우, 실제로는 없는데 있다고 잘못 판단할 수 있습니다.
+
+##### 4. 실전 활용 사례
+
+블룸 필터는 '가끔 틀려도 괜찮거나', '틀렸을 때만 DB를 확인하면 되는' 상황에서 매우 유용합니다.
+
+* **회원 가입 ID 중복 체크:** 블룸 필터에서 "ID가 있다"고 할 때만 실제 DB를 조회하여 DB 부하를 줄임.
+* **구글 크롬:** 악성 사이트 URL 식별.
+* **DBMS:** 쿼리 횟수를 줄이기 위한 내부 최적화.
+* **URL 단축 서비스:** 메모리 용량을 98% 절약한 사례 존재.
+* **페이스북:** 램 절약을 위해 변형된 블룸 필터 사용.
