--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6430,3 +6430,155 @@ HNDL 위협이 얼마나 실제적인지 보여주는 가장 강력한 증거는
 * **DBMS:** 쿼리 횟수를 줄이기 위한 내부 최적화.
 * **URL 단축 서비스:** 메모리 용량을 98% 절약한 사례 존재.
 * **페이스북:** 램 절약을 위해 변형된 블룸 필터 사용.
+
+### [(575) [NDC25-프로그래밍] NEMO APM 도입기(Mimir, Tempo, Loki)](https://www.youtube.com/watch?v=_FM3gy98chU&list=WL&index=1)
+
+**NEMO APM(Application Performance Monitoring)**
+
+![251217_ndc](img/251217_ndc.png)
+
+- NEMO 는 상용 Vendor 서비스(ex: DataDog) 과 비교하면 비용이 무려 1 / 16 수준이다.
+- 약간의 App 지표와 시스템 메트릭을 포함한 ROI(Return on Investment) 측면에서 도움이 되는 솔루션
+
+![251217_ndc_2](img/251217_ndc_2.png)
+
+- 현대 마이크로 서비스 아키텍쳐에서는 유저 로그인 요청 등등이 복잡한 절차를 통해 처리됨
+  - 각 분산 서비스 마다 Trace 로그를 확보하지 않으면, 일부 유저 장애 혹은 간헐적 장애 발생 시 추적이 굉장히 까다로움
+  - 'Identify Bottleneck' 은 APM의 특징, Trace Id 를 확보해 메트릭과 트레이스 로그를 분석하고 병목 지점을 탐지하는 데 도움을 줌.
+
+**Summarized By Gemini**
+
+#### 도입 배경 및 필요성
+
+* **IT 환경의 변화**: 컨테이너 플랫폼 확산으로 서비스 간 통신이 복잡해졌고, 클라우드 네이티브 환경(AWS, Azure 등) 이용이 늘어나면서 정밀한 모니터링이 필수적이 되었습니다. [[03:10](http://www.youtube.com/watch?v=_FM3gy98chU&t=190)]
+* **기존 솔루션(NEMO)의 한계**: 기존 사내 모니터링 시스템인 'NEMO'는 비용 효율적이지만, 문제 원인 파악(MTTR, Mean Time To Repair) 시간이 길어지고 복잡한 트래픽 구조에서 병목 구간을 찾기 어려워졌습니다. [[07:13](http://www.youtube.com/watch?v=_FM3gy98chU&t=433)]
+* **APM의 이점**: 트레이스 ID를 통해 메트릭-트레이스-로그를 연계하여 분석(상관 분석)함으로써 문제 원인을 빠르게 파악하고, 사전 조치를 통해 장애를 예방할 수 있습니다. [[08:31](http://www.youtube.com/watch?v=_FM3gy98chU&t=511)]
+
+#### 구축 과정의 난관과 해결 방안
+
+APM을 도입하며 마주친 3가지 주요 문제와 그 해결책을 소개했습니다.
+
+* **조회 속도 저하 문제**: 대용량 데이터 조회 시 타임아웃이 발생하는 문제가 있었습니다.
+  * **해결**: 멀티 테넌시(Multi-tenancy) 환경을 구성하여 테넌트 ID별로 데이터를 격리 저장(S3 폴더 구조 분리)함으로써 조회 대상을 줄여 속도를 획기적으로 개선했습니다. [[20:39](http://www.youtube.com/watch?v=_FM3gy98chU&t=1239)]
+* **데이터 누락 및 컴플라이언스 이슈**: 보안 및 헬스 체크 과정에서 테넌트 ID가 유실되거나 데이터가 수집되지 않는 문제가 발생했습니다.
+  * **해결**: OpenTelemetry Collector Builder(OCB)를 활용해 컨텍스트와 속성을 유지하는 커스텀 프로세서 플러그인을 직접 개발하여 배포했습니다. [[25:08](http://www.youtube.com/watch?v=_FM3gy98chU&t=1508)]
+* **VM 환경 적용의 어려움**: 다양한 VM 환경에 일일이 에이전트를 설치하고 설정을 맞추는 것이 불가능에 가까웠습니다.
+  * **해결**: 'NEMO APM 런처'를 개발하여 단 한 줄의 커맨드로 에이전트 다운로드, 주입, 환경 변수 설정까지 자동으로 처리되도록 자동화했습니다. [[28:24](http://www.youtube.com/watch?v=_FM3gy98chU&t=1704)]
+
+#### 기존 모니터링 및 운영 환경의 문제점 (APM 도입 배경)
+
+* **문제 원인 파악 시간(MTTR) 증가**
+  * 기존 시스템(NEMO)은 시스템 메트릭(CPU, 메모리 등) 위주라, 서비스 장애나 지연이 발생했을 때 현상을 파악하는 것이 까다로워졌습니다.
+  * 다양한 신호(Signal)가 통합되어 있지 않아 "왜" 문제가 발생했는지 찾는 데 시간이 오래 걸렸습니다.
+* **복잡한 마이크로서비스 구조에서의 병목 구간 식별 불가**
+  * 과거에는 "특정 서버가 느리다" 정도만 알면 되었지만, 현재는 서비스 간 호출 경로가 복잡하게 얽혀 있습니다.
+  * 예를 들어 `로그인 API` 하나가 `인증`, `프로필`, `아바타` 등 여러 서비스를 호출하는데, 이 중 어디가 병목인지 기존 도구로는 찾기 어려웠습니다.
+* **사용자 리포트의 신뢰도 하락**
+  * 사용자가 "렉이 걸린다"고 리포트했을 때, 이것이 사용자 네트워크 문제인지, 로직 문제인지, 플랫폼 문제인지 구분하기 힘들었습니다.
+  * 정확한 원인을 모르니 의사 결정에 활용하기 어렵고 리포트의 신뢰도가 떨어졌습니다.
+* **특정 사용자/간헐적 오류 추적 실패**
+* **특정 사용자 로그인 불가:** 전체 장애가 아니라 일부 유저에게만 발생하는 문제는 일반적인 로그로 원인을 찾기 어렵습니다.
+* **간헐적 지연:** 어쩌다 한 번 발생하는 지연(Spike)은 재현이 어렵고 원인을 찾기 힘듭니다.
+
+#### 자체 APM 구축 및 적용 과정에서의 기술적 난관
+
+* **① 대용량 데이터 조회 속도 저하 (Time-out)**
+  * **상황:** APM 데이터(트레이스, 로그)는 잘 적재되지만, 특정 조건(태그 필터)으로 조회하려고 하면 쿼리 타임아웃이 발생했습니다.
+  * **원인:** S3에 저장된 수천, 수만 개의 청크(Chunk)를 일일이 조회해야 했고, 속성 기반 필터링 시 인덱싱 한계로 인해 전체 스캔(Full Scan)이 발생했기 때문입니다.
+* **② 데이터 컨텍스트 유실 (Data Loss/No Data)**
+  * **상황:** 보안 및 컴플라이언스 준수 과정이나 특정 라이브러리 처리 도중 `Tenant ID`(데이터를 구분하는 ID)가 사라지는 현상이 발생했습니다.
+  * **원인:**
+     * 로드밸런서나 헬스 체크(Health Check) 과정에서 헤더 정보가 유실됨.
+     * 일부 언어(Python, Node.js 등)나 라이브러리에서 스팬(Span) 생성 시 메타데이터를 제대로 넘겨주지 않음.
+  * **결과:** 대시보드에서 데이터가 보이지 않거나(No Data), 잘못된 경로(Fake Tenant)로 데이터가 쌓이는 문제가 생겼습니다.
+* **③ VM 환경 적용의 난해함 (Instrumentation Difficulty)**
+  * **상황:** 쿠버네티스 환경은 운영이 비교적 쉽지만, 전통적인 VM(가상머신) 환경은 개발자가 일일이 에이전트를 설치하고 코드를 수정해야 했습니다.
+  * **구체적 문제:**
+    * 자바 애플리케이션마다 버전과 의존성이 다름.
+    * 사내 포워드 프록시(Forward Proxy) 설정, 방화벽 설정 등을 VM마다 따로 해줘야 함.
+    * 개발자가 설정 하나만 빼먹어도 데이터 수집이 안 됨.
+
+---
+
+**RED**는 마이크로서비스 환경에서 모니터링을 할 때 가장 기본적이고 중요하게 보는 3가지 핵심 지표의 약자입니다. (Grafana Labs의 Tom Wilkie가 정의한 방법론입니다.)
+
+* **R (Rate):** 요청 수 (Request rate): 초당 얼마나 많은 요청이 들어오는지 (예: RPS)
+* **E (Errors):** 에러 수 (Error rate): 전체 요청 중 실패한 요청의 비율이 얼마나 되는지 (예: 500 에러 발생 비율)
+* **D (Duration):** 응답 시간 (Duration / Latency): 요청을 처리하는 데 시간이 얼마나 걸리는지 (주로 P99, P95, P50 등의 분포로 확인)
+
+영상에서는 이 RED 지표가 서비스의 건강 상태를 파악하는 필수 지표인데, 일부 언어나 환경에서는 자동으로 수집되지 않아 별도의 처리(Span Metric Generator)가 필요했다고 언급했습니다.
+
+#### Span Metric Generator
+
+**Span Metric Generator**는 **트레이스(Trace/Span) 데이터를 분석하여 메트릭(Metric) 데이터를 역으로 생성해 주는 기술**입니다.
+
+* **배경:**
+  * **Trace(스팬):** "A 함수가 B 함수를 호출했고 3초 걸렸다"는 식의 상세한 추적 데이터입니다. 데이터 양이 방대하여 전체 통계를 내기엔 무겁습니다.
+  * **Metric(메트릭):** "현재 평균 응답 시간 2초"처럼 가볍고 집계된 숫자 데이터입니다. 대시보드 그리기에 좋습니다.
+
+* 영상에서는 Python이나 Node.js 같은 일부 환경에서 메트릭 수집이 어렵거나 누락되는 경우가 있어, 트레이스 데이터만으로 RED 지표를 강제로 만들어내기 위해 이 기술을 사용했습니다.
+
+#### .NET에서 Span Metric Generator 구현?
+
+엄밀히 말하면 **Span Metric Generator**는 .NET 애플리케이션 코드 내부에서 구현하는 것이 아니라, **OpenTelemetry Collector(데이터 수집기/서버)** 단계에서 설정하는 것이 일반적입니다.
+
+.NET 앱은 단순히 트레이스(Span)만 열심히 보내면 되고, 이를 받는 Collector가 메트릭을 생성합니다.
+
+##### 방법 A: OpenTelemetry Collector 사용 (권장/영상 방식)
+
+영상에서 넥슨이 사용한 방식입니다. .NET 앱은 건드리지 않고, Collector 설정(YAML)만 수정하면 됩니다.
+
+1. **OpenTelemetry Collector 설정 파일 (`otel-collector-config.yaml`) 수정**
+2. `processors` 섹션에 `spanmetrics`를 추가합니다.
+
+```yaml
+processors:
+  spanmetrics:
+    metrics_exporter: prometheus  # 생성된 메트릭을 보낼 곳
+    latency_histogram_buckets: [2ms, 10ms, 50ms, 100ms, ...] # Duration 측정 구간
+    dimensions: # 추가로 태깅할 정보
+      - name: http.method
+      - name: http.status_code
+
+service:
+  pipelines:
+    traces:
+      receivers: [otlp]
+      processors: [spanmetrics, batch] # 여기서 spanmetrics 프로세서가 동작
+      exporters: [otlp/tempo] # 트레이스는 저장소로 보냄
+    metrics:
+      receivers: [otlp] # spanmetrics가 만든 메트릭도 여기서 처리됨
+      exporters: [prometheus] # 메트릭 저장소로 보냄
+
+```
+
+##### 방법 B: .NET 애플리케이션 내부에서 직접 생성하고 싶다면?
+
+만약 Collector 없이 .NET 앱 내부에서 자체적으로 메트릭을 생성하고 싶다면, `OpenTelemetry.Instrumentation.AspNetCore` 같은 라이브러리를 사용하면 됩니다. 이 라이브러리는 트레이스뿐만 아니라 기본적인 RED 메트릭을 자동으로 수집해 줍니다.
+
+**C# 코드 예시 (Program.cs):**
+
+```csharp
+using OpenTelemetry.Metrics;
+using OpenTelemetry.Trace;
+
+var builder = WebApplication.CreateBuilder(args);
+
+// 1. Tracing 설정 (Span 생성)
+builder.Services.AddOpenTelemetry()
+    .WithTracing(tracerProviderBuilder =>
+    {
+        tracerProviderBuilder
+            .AddAspNetCoreInstrumentation() // ASP.NET Core 요청에 대한 Span 자동 생성
+            .AddOtlpExporter();
+    })
+// 2. Metrics 설정 (내부에서 Metric 생성)
+    .WithMetrics(meterProviderBuilder =>
+    {
+        meterProviderBuilder
+            .AddAspNetCoreInstrumentation() // 여기서 RED 지표(요청 수, 시간 등)가 자동 생성됨
+            .AddOtlpExporter();
+    });
+
+```
+
