--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6582,3 +6582,218 @@ builder.Services.AddOpenTelemetry()
 
 ```
 
+## 25.12.21
+
+### [Cloudflare investigating early outage that took down LinkedIn, Zoom | CBC News](https://www.cbc.ca/news/business/cloudflare-outage-linkedin-zoom-9.7004214)
+
+- 12월 5일 Cloudflare 서비스 다운
+
+- [What is Cloudflare, and why does it keep breaking the internet?](https://technical.ly/entrepreneurship/what-is-cloudflare-outage-2025/)
+- [Multiple Threat Actors Exploit React2Shell (CVE-2025-55182) | Google Cloud Blog](https://cloud.google.com/blog/topics/threat-intelligence/threat-actors-exploit-react2shell-cve-2025-55182?hl=en)
+
+    CVE-2025-55182 is an unauthenticated RCE vulnerability in React Server Components with a CVSS v3.x score of 10.0 and a CVSS v4 score of 9.3. The flaw allows unauthenticated attackers to send a single HTTP request that executes arbitrary code with the privileges of the user running the affected web server process.
+
+**Summarized By Gemini**
+
+2025년 12월 5일 발생한 Cloudflare 장애는 전 세계 인터넷 트래픽의 상당 부분을 마비시킨 중대한 사건이었습니다. Cloudflare 공식 포스트모템(Post-mortem) 내용을 바탕으로 기술적 원인과 대응책을 정리해 드립니다.
+
+#### 1. 장애의 트리거: React2Shell (CVE-2025-55182)
+
+모든 일의 시작은 React에서 발견된 **원격 코드 실행(RCE)** 취약점이었습니다.
+
+* **취약점 명칭**: React2Shell (CVE-2025-55182).
+* **발생 원인**: React 서버 컴포넌트(RSC)의 'Flight' 직렬화 프로토콜에서 조작된 데이터를 처리할 때 발생하는 **안전하지 않은 역직렬화** 문제입니다.
+* **Cloudflare의 대응**: 이 취약점이 워낙 치명적이었기에, Cloudflare는 자사 고객들을 보호하기 위해 **WAF(Web Application Firewall)** 규칙을 긴급히 업데이트하기로 결정했습니다.
+
+#### 2. 기술적 근본 원인: 복합적 설정 오류
+
+WAF 규칙을 적용하고 최적화하는 과정에서 두 가지 결정적인 설정 변경이 충돌을 일으켰습니다.
+
+1. **본문 버퍼 크기 확장**: React의 대규모 직렬화 데이터를 검사하기 위해 WAF가 읽어들이는 본문(Body) 버퍼 크기를 기존 **128KB에서 1MB로 증설**했습니다.
+2. **전역 설정 변경 및 Lua 런타임 오류**: WAF 규칙을 개선하는 과정에서 전역 설정을 변경했는데, 이것이 **FL1 프록시**에서 실행되던 **Lua 스크립트**의 특정 로직(nil 필드 참조)과 충돌했습니다.
+3. **결과**: 프록시 서버 내에서 치명적인 런타임 오류가 발생하며 요청을 정상적으로 처리하지 못하고 **HTTP 500(Internal Server Error)**를 반환하게 되었습니다.
+
+#### 3. 장애 영향도
+
+* **일시**: 2025년 12월 5일.
+* **지속 시간**: 약 **25분**.
+* **규모**: 전 세계 Cloudflare HTTP 트래픽의 약 **28%**가 영향을 받았습니다.
+* **특징**: 단순히 일부 서비스가 느려진 것이 아니라, 수많은 웹사이트와 서비스가 완전히 접속 불능 상태에 빠졌습니다.
+
+#### 4. 사후 대책: "Code Orange: Fail Small"
+
+Cloudflare는 이번 장애를 계기로 시스템이 고장 나더라도 전체가 아닌 **'작게 고장 나도록(Fail Small)'** 아키텍처를 재설계하는 **'Code Orange'** 프로젝트를 선언했습니다.
+
+* **Fail-Safe 메커니즘 강화**: WAF나 특정 보안 모듈에서 오류가 발생할 경우, 트래픽을 차단(Fail-Closed)하는 것이 아니라 해당 모듈만 건너뛰고(Fail-Open) 요청을 전달하는 방식을 검토합니다.
+* **점진적 배포 정책 강제**: 설정 변경 시 아무리 긴급하더라도 전 세계 모든 데이터 센터에 한 번에 적용하는 것을 금지하고, 단계별 카나리(Canary) 배포를 엄격히 적용합니다.
+* **테스트 도구 개선**: 이번 장애의 원인이 되었던 전역 설정 변경이 실제 런타임(Lua)에 어떤 영향을 주는지 사전에 완벽히 시뮬레이션할 수 있도록 테스트 환경을 고도화합니다.
+
+이 장애는 **"보안을 강화하려는 시도가 오히려 가용성을 해칠 수 있다"**는 분산 시스템의 딜레마를 극명하게 보여준 사례로 기록되었습니다.
+
+### [More databases should be single-threaded](https://blog.konsti.xyz/more-databases-should-be-single-threaded/)
+
+- DB 트랜잭션의 내부 구현은 굉장히 복잡하고 런타임에 어떻게 동작할지 예상이 어렵다. PostgreSQL 에서 트랜잭션은 무려 세 가지 모드가 존재하며, 각 모드에 따라 예상되는 부작용과 문제들을 미리 알려주는 컴파일러나 린터는 없다.
+
+In essence, a traditional SQL database can write and read to rows in a table. It can also lock those rows, meaning that other writers may have to wait for the lock to be freed.
+
+More concretely, Postgres has three different transaction modes:
+
+1. READ COMMITTED (default): Read statements will read the current database state. Write statements don't abort.
+  * If you read a row and then another transaction changes it, any future reads will return the new value.
+2. REPEATABLE READ: Read statements see a snapshot of the DB taken at the start of the transaction. Write statements abort the transaction if that particular row changed since the snapshot.
+  * Serialization anomalies (= writes end up out-of-order) are still possible. You also need to handle retries.
+3. SERIALIZABLE: Like REPEATABLE READ, but write statements abort the transaction if any dependent rows changed since the snapshot.
+  * Ensures a perfect ordering without serialization anomalies, but there is considerable overhead and retries are more common.
+
+![251221_db_transaction](img/251221_db_transaction.png)
+
+**Summarized By Gemini**
+
+요청하신 블로그 글 **"More databases should be single-threaded (더 많은 데이터베이스가 단일 스레드여야 합니다)"**의 내용을 정리하여 한국어로 번역/요약해 드립니다.
+
+저자는 X(트위터)에서 **"대부분의 트랜잭션 데이터베이스는 단일 스레드(Single-threaded)여야 하며, 공격적으로 샤딩(Sharding)되어야 한다"**는 주장을 펼쳤습니다. 일반적인 B2B SaaS 앱이라도 이러한 구조가 더 적합할 수 있음을 설득하려 합니다.
+
+#### **2. 현상 유지(Status Quo)의 문제점**
+
+전통적인 SQL 데이터베이스(예: Postgres)는 행(row)을 잠그는(Locking) 방식을 사용합니다. Postgres의 트랜잭션 모드(Read Committed, Repeatable Read, Serializable)는 다음과 같은 심각한 문제들을 안고 있습니다.
+
+* **초기 문제:** 아무도 트랜잭션을 제대로 이해하고 구현하지 못합니다. 컴파일 에러나 경고가 없기 때문에 실수를 찾기 어렵습니다.
+* **스케일링 문제:**
+* **잠금(Locking) 오버헤드:** 쓰기 작업 시 락이 걸리며, 트랜잭션 A와 B가 서로 다른 순서로 자원을 요청하면 **데드락(Deadlock)**이 발생합니다.
+* **예측 불가능성:** 부하가 높을 때 직렬화(Serializable) 트랜잭션은 계속 재시도(Retry)해야 하며 성공 여부를 장담할 수 없습니다.
+* **경쟁 상태(Race Condition):** 프로덕션 환경에서 발생하는 레이스 컨디션은 디버깅이 거의 불가능하며 데이터 오염을 유발합니다.
+* **병목 현상:** 서버리스 인프라와 달리 기존 DB는 수평 확장이 어려워 시스템의 병목이 됩니다.
+
+많은 기업들은 문제가 터지기 전까지 트랜잭션을 무시하다가, 나중에 전문가를 고용해 해결하는 방식을 택합니다. 하지만 더 나은 방법이 있다면 어떨까요?
+
+#### **3. 아이디어 1: 단일 작성자(Single-writer) 데이터베이스**
+
+모든 문제는 '충돌하는 쓰기(conflicting writes)'에서 발생합니다. 만약 **한 번에 하나의 작성자만 허용**한다면 어떨까요?
+
+* **SQLite의 사례:** SQLite가 이 방식을 사용하며 잘 작동합니다.
+* **한계:**
+* 확장성 제한(초당 수만 건 이상의 쓰기 불가).
+* 여전히 파일 잠금 등의 오버헤드 존재.
+* 작성자 하나가 멈추면 전체 DB가 멈춤(쓰기 동시성 없음).
+
+#### **4. 아이디어 2: 샤딩(Sharding)은 얼마나 어려운가?**
+
+SQLite 방식은 확장이 안 되니, 이를 수평적으로 쪼개는(Sharding) 건 어떨까요?
+
+* **이론:** 거대한 DB를 작게 쪼개서 부하를 줄이자.
+* **현실적인 어려움:**
+* 크로스 샤드(Cross-shard) 쿼리와 조인(Join)이 매우 어려움.
+* 인프라 복잡도 증가(풀러, 게이트웨이, 백업 등).
+* **트랜잭션:** 분산 트랜잭션은 어렵거나 불가능에 가까움(일관성 vs 가용성 트레이드오프).
+* **마이그레이션:** 샤드 키 변경이나 스키마 변경이 매우 어려움.
+* 기능 제약: Auto-increment(자동 증가) 카운터 사용 불가, 샤드 간 외래 키(FK) 제약 불가.
+
+* **해결책:** 새로운 습관(카운터 대신 UUID 사용, DB 제약 대신 앱 레벨 체크)과 더 나은 도구로 대부분 해결 가능합니다. 트랜잭션 문제는 낙관적 동시성 제어(Optimistic Concurrency)나 사가(Saga) 패턴으로 우회할 수 있습니다.
+
+#### **5. 제안: 샤딩된 단일 스레드 데이터베이스 (Sharded Single-thread Databases)**
+
+이 글의 핵심 제안입니다. **"공격적으로 샤딩하되, 각 샤드당 정확히 하나의 작성자 스레드(Writer Thread)만 할당하자"**는 것입니다.
+
+* **작동 방식:**
+* 샤드당 하나의 전담 작성자 스레드를 둡니다. 락 경쟁(Lock contention) 비용이 사라집니다.
+* 협력적 멀티태스킹(Cooperative multitasking) 방식으로 긴 쿼리를 처리하여 블로킹을 방지합니다.
+
+
+* **장점 (얻는 것):**
+* **개발자 경험(DX):** 샤드 내의 모든 트랜잭션은 항상 직렬화(Serializable)되므로 데드락이나 충돌 걱정이 없습니다. 생각하기 훨씬 쉽습니다.
+* **확장성:** 노드만 추가하면 무한히 수평 확장이 가능합니다.
+* **성능:** 스레드 간 동기화가 필요 없으므로 스레드당 처리량(Throughput)이 극도로 높습니다.
+* **심리적 안정:** 숨겨진 레이스 컨디션이 없는 예측 가능한 시스템이 됩니다.
+
+* **비용 (잃는 것):** 첫날부터 샤딩을 해야 하며, Auto-increment나 일부 복잡한 조인을 포기해야 합니다.
+
+#### **6. 결론: 왜 아직 대중화되지 않았나?**
+
+* **이미 존재함:** **ScyllaDB**나 **VoltDB**가 정확히 이 '코어당 샤드(shard-per-core)' 개념을 사용합니다.
+* **문제점:** 이들은 주로 극한의 규모가 필요한 곳을 타겟으로 합니다.
+* **저자의 희망:** 일반적인 웹 개발자들도 사용할 수 있는, **"대부분 Postgres와 호환되면서, 완벽한 직렬화(Serializable) 트랜잭션을 보장하고, 샤딩이 쉽고, 단일 스레드의 성능을 가진"** 데이터베이스가 필요합니다.
+* **Cloudflare Workers**나 **Rivet** 같은 액터 모델(Actor model)도 비슷한 아이디어지만, 기존 패러다임을 바꾸는 비용이 듭니다.
+
+**요약하자면:** 모든 문제를 해결할 수는 없지만, **샤딩된 단일 스레드 데이터베이스**는 오늘날 우리가 겪는 복잡한 동시성 문제와 확장성 문제를 해결할 수 있는 가장 합리적인 대안이 될 수 있습니다.
+
+---
+
+- [The Death of Thread Per Core • Buttondown](https://buttondown.com/jaffray/archive/the-death-of-thread-per-core/)
+
+이 글은 최근 데이터베이스 및 고성능 시스템 설계에서 지배적이었던 **'코어당 스레드(Thread-per-Core)'** 아키텍처가 왜 다시 **'작업 훔치기(Work-Stealing)'** 혹은 공유 상태 동시성 모델로 전환되고 있는지를 설명합니다.
+
+**1. 배경: 비동기 런타임과 작업 훔치기 (Work-Stealing)**
+
+* Rust의 비동기 런타임 같은 환경에서는 작업(Task)이 중단(yield)되면, 이는 "나중에 다시 시작"이 아니라 "새로운 작업 조각을 큐에 넣는 것"으로 처리됩니다.
+* **작업 훔치기(Work-Stealing) 모델**은 한 스레드의 작업 큐가 비어있을 때, 바쁜 다른 스레드의 큐에서 작업을 가져와 처리하는 방식입니다.
+* **장점:** 작업 부하가 고르게 분산됩니다. (어떤 스레드는 놀고, 어떤 스레드는 과부하 걸리는 것을 방지)
+* **단점:** 작업을 스레드 간에 이동시켜야 하므로 데이터 지역성(Locality)이 떨어지고, Rust에서는 `Send` 트레이트(스레드 간 이동 가능성 보장) 제약으로 인해 개발자가 불편해하기도 합니다.
+
+**2. 과거의 트렌드: 코어당 스레드 (Thread-per-Core)**
+
+* 지난 몇 년간 데이터 처리 분야(데이터베이스 등)에서는 **코어당 스레드** 방식이 대세였습니다.
+* **논리:** "데이터를 스레드별로 파티셔닝(분할)하고, 스레드 간 데이터 이동을 없애자!"
+* 데이터가 캐시(Cache)에 머물 확률이 높고, 느린 CPU 간 통신(MESI 메시지 등)이나 락(Lock) 경합이 없어 구현이 단순하고 성능이 좋습니다.
+* **전제:** 데이터 키가 무작위로 잘 분산되어 있다면(편향되지 않았다면) 이 방식은 완벽합니다.
+
+**3. 변화의 바람: 왜 다시 공유 상태(Shared-state)인가?**
+
+* 최근 몇 년간 "Morsel-Driven Parallelism"과 같은 논문들이 등장하며 반대 의견이 힘을 얻고 있습니다.
+* **이유 1 (하드웨어):** 코어 수가 엄청나게 늘어났습니다. 데이터가 특정 파티션에 몰리는 **'데이터 편향(Skew)'**이 발생했을 때, 코어당 스레드 모델은 이를 처리하기 매우 고통스럽습니다. (한 코어만 죽어라 일하고 나머지 수십 개 코어는 놀게 됨)
+* **이유 2 (병목 지점의 이동):** 과거에는 디스크 I/O가 느려서 CPU 효율이 덜 중요했지만, 지금은 저장 장치(NVMe 등)가 너무 빨라져서 I/O 병목이 사라졌습니다. 이제는 CPU를 100% 활용하는 것이 훨씬 중요해졌습니다.
+
+**4. 데이터 처리 엔진의 특수성**
+
+* 일반적인 프로그래밍 언어의 런타임과 달리, **데이터베이스 스케줄러**는 자신이 처리할 작업(쿼리)의 특성을 미리 파악(Introspection)할 수 있습니다.
+* 작업을 수학적으로 쪼개거나 합칠 수 있는 자유도가 있기 때문에, 스케줄러가 더 똑똑한 결정을 내릴 수 있어 공유 상태 동시성이 다시 유리해졌습니다.
+
+**5. 결론: 문화적/확장성 이유**
+
+* 시스템이 거대해지고 멀티테넌시(Multi-tenancy)를 지원해야 할수록, **데이터 편향(Skew)**은 피할 수 없는 문제가 됩니다.
+* 사용자에게 "데이터를 고르게 분산시키세요"라고 강요하는 것은 더 이상 통하지 않습니다.
+* 결국, 시스템 자체가 탄력성(Elasticity)을 가지고 편향된 부하를 스스로 재분배할 수 있어야 하므로, 다시 작업 훔치기(Work-Stealing)와 같은 유연한 모델이 필요해졌습니다.
+
+---
+
+- [Chromium Docs - Process Model and Site Isolation](https://chromium.googlesource.com/chromium/src/+/main/docs/process_model_and_site_isolation.md)
+
+    At a high level, Chromium aims to use separate processes for different instances of web sites when possible. A web site instance is a group of documents or workers that must share a process with each other to support their needs, such as cross-document scripting. (This roughly corresponds to an “agent cluster” from the HTML Standard, as described below.)
+
+    For stability, putting web site instances in separate processes limits the impact of a renderer process crash or hang, allowing other content to continue working. For performance, this allows different web site instances to run in parallel with better responsiveness, at the cost of some memory overhead for each process.
+
+    For security, strictly using separate processes for different web sites allows significantly stronger defenses against malicious web sites. In addition to running web content within a low-privilege sandbox that limits an attacker‘s access to the user’s machine, Chromium's multi-process architecture can support Site Isolation, where each renderer process is only allowed to access data from a single site. Site Isolation involves:
+
+- Locked Renderer Processes: A renderer process can be limited to documents and workers from a single web site or origin, even if such documents are in iframes.
+- Browser-Enforced Restrictions: The privileged browser process can monitor IPC messages from renderer processes to limit their actions or access to site data (e.g., using ChildProcessSecurityPolicy::CanAccessDataForOrigin). This prevents compromised renderer processes from asking for cross-site data, using permissions granted to other sites, etc. These restrictions take two main forms:
+  - “Jail” checks: Ensure that a process locked to a particular site can only access data belonging to that site. If all processes are locked, this is sufficient protection.
+  - “Citadel” checks: Ensure that unlocked processes cannot access data for sites that require a dedicated process. This adds protection in cases where full Site Isolation is not available, such as Android.
+- Network Response Limitations: Chromium can ensure that locked renderer processes are only allowed to receive sensitive data (e.g., HTML, XML, JSON) from their designated site or origin, while still allowing cross-origin subresource requests (e.g., images, media) as needed for compatibility. This is achieved using Cross-Origin Read Blocking (CORB) or Opaque Response Blocking (ORB).
+
+
+**Summarized By Gemini**
+
+제공해주신 Chromium 기술 문서는 브라우저의 **프로세스 모델(Process Model)**과 **사이트 격리(Site Isolation)**의 설계 목적 및 구현 방식을 상세히 다루고 있습니다. 백엔드 개발자의 관점에서 핵심 아키텍처 내용을 정리해 드립니다.
+
+#### 1. 멀티 프로세스 모델의 핵심 목표
+
+Chromium은 웹 사이트를 별도의 OS 프로세스에 배치하여 다음과 같은 이점을 얻습니다.
+
+* **안정성(Stability)**: 특정 렌더러 프로세스가 충돌하거나 멈추더라도 다른 탭이나 브라우저 전체에 영향을 주지 않습니다.
+* **성능(Performance)**: 여러 사이트 인스턴스를 병렬로 실행하여 응답성을 높이지만, 프로세스당 메모리 오버헤드가 발생합니다.
+* **보안(Security)**: 웹 콘텐츠를 저권한 **샌드박스(Sandbox)** 내에서 실행하며, 사이트 격리를 통해 서로 다른 사이트 간의 데이터 접근을 차단합니다.
+
+#### 2. 사이트 격리(Site Isolation)의 메커니즘
+
+악성 사이트가 다른 사이트의 데이터를 훔치는 것을 방지하기 위한 핵심 보안 계층입니다.
+
+* **프로세스 잠금(Locked Renderer Processes)**: 각 렌더러 프로세스는 단일 사이트의 문서와 워커만 처리하도록 제한됩니다.
+* **브라우저 강제 제한(Browser-Enforced Restrictions)**: 권한이 있는 브라우저 프로세스가 IPC 메시지를 모니터링하여, 프로세스가 허용되지 않은 사이트 데이터에 접근하려고 하면 차단합니다.
+* **네트워크 응답 제한**: **CORB(Cross-Origin Read Blocking)** 또는 **ORB**를 사용하여 민감한 데이터(HTML, XML, JSON 등)가 권한 없는 프로세스로 전달되는 것을 방지합니다.
+
+#### 3. 프로세스 최적화 및 특수 케이스
+
+메모리 효율을 위해 무조건 프로세스를 생성하지 않고 전략적으로 재사용합니다.
+
+* **소프트 프로세스 한계(Soft Process Limit)**: 시스템 메모리에 따라 프로세스 개수 제한을 두며, 이를 초과하면 동일 사이트 프로세스를 무작위로 재사용합니다.
+* **공격적 재사용(Aggressive Reuse)**: iframe(OOPIF)이나 ServiceWorker는 리소스 절약을 위해 기존 프로세스에 우선 배치됩니다.
+* **WebUI 격리**: `chrome://settings`와 같은 고권한 페이지는 항상 엄격하게 격리되며 네트워크 데이터 로드가 차단됩니다.
