--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -6797,3 +6797,46 @@ Chromium은 웹 사이트를 별도의 OS 프로세스에 배치하여 다음과
 * **소프트 프로세스 한계(Soft Process Limit)**: 시스템 메모리에 따라 프로세스 개수 제한을 두며, 이를 초과하면 동일 사이트 프로세스를 무작위로 재사용합니다.
 * **공격적 재사용(Aggressive Reuse)**: iframe(OOPIF)이나 ServiceWorker는 리소스 절약을 위해 기존 프로세스에 우선 배치됩니다.
 * **WebUI 격리**: `chrome://settings`와 같은 고권한 페이지는 항상 엄격하게 격리되며 네트워크 데이터 로드가 차단됩니다.
+
+## 25.12.23
+
+### [Streams Record Truth. Queues Do Work A .NET Way To Keep Them Straight  Christopher Johnson](https://thatamazingprogrammer.com/posts/streams-record-truth-queues-do-work-a-dotnet-way-to-keep-them-straight/)
+
+![251223_streamsAndQueue](img/251223_streamsAndQueue.png)
+
+> The rule is simple: streams record what happened, queues get work done.
+
+이 글은 **"스트림(Stream)은 사건의 기록(진실)을 담당하고, 큐(Queue)는 실제 작업 처리를 담당해야 한다"**는 핵심 원칙을 다루고 있습니다. 이 두 가지를 혼동했을 때 발생하는 문제를 지적하며, .NET 환경(Azure Event Hubs와 Service Bus)에서 이를 올바르게 구현하는 패턴을 설명합니다.
+
+---
+
+시스템을 설계할 때 메시지를 발행하기 전 스스로에게 물어봐야 할 질문이 있습니다.
+
+> "누군가 나중에 이 데이터를 증명하거나 다시 재생(Replay)해야 하는가? 아니면 단순히 작업이 완료되기만 하면 되는가?"
+
+* **증명이나 재생이 필요하다면:** **스트림 (Stream)**을 사용하세요. (예: Kafka, Event Hubs) - 이는 변경 불가능한 **원장(Ledger)** 역할을 합니다.
+* **작업 완료가 목적이라면:** **큐 (Queue)**를 사용하세요. (예: RabbitMQ, Service Bus) - 이는 **할 일 목록(Task)**입니다.
+
+대부분의 시스템은 두 가지가 모두 필요합니다. 핵심은 하나의 도구로 모든 것을 하려 하지 않는 것입니다.
+
+* **큐**는 성공 시 데이터가 사라지므로 기록용(Ledger)으로 부적합합니다.
+* **스트림**은 하나의 불량 메시지가 전체 파티션을 막을 수 있어 작업 큐(Job Queue)로 쓰기에 투박합니다.
+
+운영 환경에서 견고한 모델은 다음과 같습니다.
+
+1. **사실(Fact)**이 스트림으로 들어갑니다.
+2. **브리지(Bridge)** 컨슈머가 사실을 작업(Task)으로 변환합니다.
+3. **작업**이 큐로 들어갑니다.
+4. **워커(Worker)**들이 병렬로 작업을 수행합니다.
+5. **결과**는 다시 새로운 사실로서 스트림에 기록됩니다.
+
+#### 흔한 실수 3가지 (Common Mistakes)
+
+1. **큐를 원장(Ledger)으로 사용하기:**
+* 큐는 장기 보관소가 아닙니다. 비용 절감을 위해 보관 기간을 줄이면 비즈니스의 중요한 이력(감사 로그)이 소리 없이 사라집니다. 사실 데이터는 Event Hubs나 Kafka에 저장해야 합니다.
+
+2. **스트림을 모든 작업(Work) 처리에 사용하기:**
+* 모든 작업을 스트림에 넣으면, 메시지 하나가 실패할 경우 파티션 전체가 막혀버립니다(Head-of-line blocking). 재시도 로직이나 데드 레터(Dead-letter) 처리를 직접 구현하다 보면 결국 나쁜 성능의 큐를 직접 만드는 꼴이 됩니다. 독립적인 재시도와 확장이 필요한 명령은 큐를 사용하세요.
+
+3. **"정확히 한 번(Exactly Once)"에 대한 맹신:**
+* 분산 시스템에서 "정확히 한 번"은 존재하지 않습니다. 오직 **"최소 한 번(At-Least-Once) + 멱등성(Idempotency)"**만 있을 뿐입니다. 메시지가 두 번 처리되어도 문제가 없도록 핸들러를 설계하세요.
