--- a/2026/C_2026.md
+++ b/2026/C_2026.md
@@ -225,3 +225,50 @@ public void FutureMarginModel_MarginEntriesValid(string market)
   }
 }
 ```
+
+# 26.01.08
+
+## [IO is no longer the bottleneck](https://stoppels.ch/2022/11/27/io-is-no-longer-the-bottleneck.html)
+
+Ben Hoyt's blog refers to an [earlier post](https://benhoyt.com/writings/count-words/) which includes a faster C version of the word frequency counter. I compiled optimized.c with GCC 12, using -O3 -march=native flags, and ran it on the 425MB input file (100 copies of the King James Version of the Bible).
+
+이 글은 "현대 시스템에서 데이터 처리의 병목은 디스크 읽기(I/O)가 아니라 CPU 성능"이라는 주장을 검증하기 위해, 단어 수 세기(Word Count) 프로그램을 극한으로 최적화해 본 과정을 담고 있습니다. (2022. 11. 27)
+
+### 1. 배경: 현대 디스크의 속도
+
+최근 벤 호이트(Ben Hoyt)는 "순차 읽기(Sequential Read) 속도는 엄청나게 빨라진 반면, CPU 속도는 정체되었기 때문에 I/O가 병목이라는 믿음은 더 이상 사실이 아니다"라고 주장했습니다.
+
+* **저자의 측정 결과:** * **Cold Cache(디스크에서 직접 읽기):** 약 1.6 GB/s
+* **Warm Cache(메모리에 로드된 상태):** 약 12.8 GB/s
+
+### 2. 최적화된 C 코드의 한계
+
+벤 호이트가 작성한 최적화된 C 언어 단어 빈도 계산 코드를 테스트해 본 결과, 웜 캐시 상태에서도 **278 MB/s**라는 실망스러운 속도가 나왔습니다. 디스크 읽기 속도(1.6 GB/s)에 한참 못 미치는 수치입니다.
+
+* **원인 분석:** 루프 내에 많은 분기문(Branch)이 있어 컴파일러의 **자동 벡터화(Auto-vectorization)**를 방해하고 있었습니다.
+* **개선 시도:** 소문자 변환 로직을 루프 밖으로 빼는 등 약간의 수정을 거쳐 **330 MB/s**까지 끌어올렸으나, 여전히 디스크 속도보다 5배나 느렸습니다.
+
+### 3. 리눅스 기본 도구 `wc -w`의 성능
+
+가장 단순한 작업인 단어 수 세기 전용 도구 `wc`는 어떨까요?
+
+* **결과:** **245.2 MB/s**로 생각보다 매우 느렸습니다.
+* **이유:** `wc`는 단순 공백(' ')뿐만 아니라 탭, 줄 바꿈, 로케일별 특수 문자 등을 모두 처리해야 하므로 범용적인 대신 느립니다.
+
+### 4. 극한의 최적화: AVX2 벡터화
+
+저자는 지난 10년간 비약적으로 발전한 CPU의 기능을 활용하기 위해 **SIMD(AVX2)**를 직접 사용하여 코드를 작성하기로 했습니다.
+
+* **핵심 기술:**
+1. **256비트 레지스터:** 한 번에 32개의 문자를 처리.
+2. **VPCMPEQB:** 레지스터 내에서 공백 문자를 찾아 마스크(Mask)를 생성.
+3. **PMOVMSKB & 비트 트릭:** 생성된 마스크를 32비트 정수로 변환한 뒤, 비트 연산(`ffs` 등)을 통해 단어의 시작과 끝을 빠르게 계산.
+4. **루프 언롤링(Unrolling):** 루프를 4배로 풀어 한 번에 128바이트의 데이터를 처리.
+
+- 결과적으로 Warm Cache 기준 **1.45 GB/s** CPU가 거의 100% 사용됨
+
+### ### 결론
+
+* **I/O는 더 이상 병목이 아니다:** 단일 스레드에서 가장 빠른 벡터화 명령어를 사용하여 단어 수만 세는 단순 작업을 수행하더라도, 겨우 **Cold Cache 디스크 읽기 속도(1.6 GB/s)의 약 90%** 정도만 따라잡을 수 있었습니다.
+* **웜 캐시 기준:** CPU 처리 속도(1.45 GB/s)는 메모리에 올라온 데이터 읽기 속도(12.8 GB/s)의 **약 11%** 수준에 불과합니다.
+* **시사점:** 이제 하드웨어(NVMe SSD 등)의 발전 속도가 소프트웨어와 CPU의 처리 능력을 앞질렀습니다. 복잡한 로직이 들어가는 프로그램이라면 병목은 십중팔구 I/O가 아닌 CPU에서 발생할 것입니다.
