--- a/2026/C_2026.md
+++ b/2026/C_2026.md
@@ -324,3 +324,44 @@ Ben Hoyt's blog refers to an [earlier post](https://benhoyt.com/writings/count-w
 
 * **SIP (System Integrity Protection):** 맥은 관리자 권한을 가진 사용자나 앱이라 하더라도 시스템 핵심 파일과 프로세스를 함부로 수정하지 못하도록 커널 수준에서 차단합니다 `[00:02:34]`.
 * **보안의 본질적 차이:** 윈도우는 악성코드가 관리자 권한을 탈취하면 시스템 전체가 위협받지만, 맥은 OS 아키텍처 수준에서 방어 구역을 설정해 두어 악성코드 확산이 어렵고 훨씬 안전한 기반 위에서 동작합니다 `[00:02:46]`.
+
+# 26.02.20
+
+## [요즘 핵쟁이가 멸종 중인 이유](https://www.youtube.com/watch?v=Cm2M3bbRoKA)
+
+- [뱅가드가 무엇인가요? – VALORANT 고객지원](https://support-valorant.riotgames.com/hc/ko/articles/360046160933-%EB%B1%85%EA%B0%80%EB%93%9C%EA%B0%80-%EB%AC%B4%EC%97%87%EC%9D%B8%EA%B0%80%EC%9A%94)
+
+기술적 방어 체계가 고도화되고 핵 사용에 필요한 비용과 리스크가 감당하기 어려운 수준으로 높아지면서 핵 유저가 감소하고 있는 추세입니다. 다만, 일반 유저들도 보안상의 이유로 커널 레벨 프로그램을 항상 구동해야 하는 부담을 안게 되었다는 점도 언급하고 있습니다 [[04:23](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=263)].
+
+### **1. 핵 감지 기술의 발전 (커널 레벨 안티치트)**
+
+* 과거의 핵은 주로 메모리 조작이나 DLL 파일 삽입 방식이었으나, 최근에는 게임사들이 시스템의 가장 깊은 영역인 **커널 레벨**에서 작동하는 안티치트 프로그램(예: 라이엇의 뱅가드)을 도입했습니다 [[01:01](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=61)].
+* 이러한 프로그램은 부팅 시 드라이버 형태로 먼저 로드되어 수상한 드라이버나 외부 장치의 접근을 사전에 차단합니다 [[02:26](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=146)].
+
+### **2. 하드웨어 보안 강화**
+
+* 최근에는 **TPM**이나 **시큐어 부트(Secure Boot)** 설정을 강제하여, 부팅 과정에서 변조된 프로그램이 실행되는 것을 막고 있습니다 [[02:42](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=162)].
+* 심지어 하드웨어 보안 취약점이 있는 특정 메인보드 제조사에 패치를 요구하는 등 하드웨어 단계에서의 보안도 강화되고 있습니다 [[03:04](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=184)].
+
+### **3. 데이터 및 패턴 분석 (AI/딥러닝)**
+
+* 서버 측에서 유저의 플레이 패턴(반응 속도, 명중률 등)을 분석하여 통계적으로 의심스러운 '아웃라이어'를 찾아내 핵 사용 여부를 판별합니다 [[03:14](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=194)].
+
+### **4. 핵 사용 비용의 급증 (경제적 장벽)**
+
+* 게임사의 방어를 뚫기 위해 별도의 하드웨어 장비와 서브 컴퓨터가 필요해지면서, 핵을 사용하기 위해 **최소 100만 원 이상의 비용**이 들게 되었습니다 [[00:32](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=32)].
+* 또한, 걸렸을 때 하드웨어 밴(Hardware Ban)을 당하면 CPU나 메인보드를 교체해야 하는 리스크도 커졌습니다 [[03:51](http://www.youtube.com/watch?v=Cm2M3bbRoKA&t=231)].
+
+Q. 이 방식은 맥이나 리눅스 환경에서 지원? 발로란트는 맥 / 리눅스 플레이 가능?
+
+**발로란트는 현재 맥(macOS)과 리눅스(Linux) 환경에서 공식적으로 플레이할 수 없습니다.**
+
+### **왜 맥과 리눅스에서 안 되나요?**
+
+* **커널 아키텍처의 차이:** 뱅가드는 **윈도우 커널(Windows NT Kernel)**의 드라이버 모델에 맞춰 최적화되어 개발되었습니다. 맥은 유닉스(UNIX) 기반의 **Darwin 커널**, 리눅스는 **Linux 커널**을 사용하기 때문에 시스템 호출 방식이나 보안 구조가 완전히 다릅니다. 윈도우용으로 만든 커널 드라이버를 이들 OS에 이식하는 것은 사실상 소프트웨어를 처음부터 다시 만드는 것과 같습니다.
+* **보안 철학의 충돌:** 특히 리눅스는 오픈 소스이며 사용자가 커널을 자유롭게 수정할 수 있습니다. 뱅가드처럼 "시스템의 통제권을 먼저 쥐고 감시하겠다"는 방식이 리눅스의 개방적인 보안 구조와 정면으로 충돌하며, 보안 신뢰 체계(Trust Chain)를 구축하기가 매우 어렵습니다.
+
+### **리그 오브 레전드(LoL)는 되는데 왜 발로란트는 안 되나요?**
+
+최근 리그 오브 레전드에도 뱅가드가 도입되었지만, 맥 버전 LoL은 뱅가드 없이 별도의 보안 체계를 적용하여 서비스를 유지하고 있습니다. 하지만 **발로란트**는 게임 설계 초기부터 뱅가드와 한 몸으로 기획된 FPS 게임이기 때문에, 안티치트가 우회될 가능성이 있는 환경(맥/리눅스)은 아예 차단하고 있는 것입니다.
+
