--- a/2026/C_2026.md
+++ b/2026/C_2026.md
@@ -365,3 +365,50 @@ Q. 이 방식은 맥이나 리눅스 환경에서 지원? 발로란트는 맥 / 
 
 최근 리그 오브 레전드에도 뱅가드가 도입되었지만, 맥 버전 LoL은 뱅가드 없이 별도의 보안 체계를 적용하여 서비스를 유지하고 있습니다. 하지만 **발로란트**는 게임 설계 초기부터 뱅가드와 한 몸으로 기획된 FPS 게임이기 때문에, 안티치트가 우회될 가능성이 있는 환경(맥/리눅스)은 아예 차단하고 있는 것입니다.
 
+# 26.02.28
+
+## [[안내] 트릭컬 노트 비공식 프로그램 배포 관련 주의사항 안내 - 트릭컬 RE:VIVE 채널](https://arca.live/b/trickcal/163502330?mode=best)
+
+- 트릭컬 노트 웹 서비스 : 게임 유저 정보 DB 를 조회, 실용적인 포맷으로 제공
+- 역시 웹이라 그런가 바로 악용 사례 등장, 유저 정보를 스크래이핑 해가는 통로로 사용하는 듯
+
+안녕하세요, 교주님들.
+에피드게임즈입니다.
+
+먼저, 트릭컬 리바이브 IP를 바탕으로 다양한 창작 활동을 이어가 주시는 모든 분들께 깊이 감사드립니다.
+보내주시는 관심과 열정은 게임의 큰 힘이 되고 있습니다.
+
+다만, 트릭컬 노트 BETA 공개 이후 공식 웹 페이지의 정보를
+비정상적인 방식으로 취득해 제작된 비공식 프로그램이 확인되고 있습니다.
+
+이에 교주님들의 개인정보 보호와 안전한 이용 환경을 위해
+해당 프로그램의 다운로드 및 사용을 지양해 주시기를 권고드립니다.
+
+공식 웹을 통해 제공되는 트릭컬 노트 BETA 내 정보를 승인 없이 수집/가공해 앱 형태로 배포하는 행위는
+「부정경쟁방지 및 영업비밀보호에 관한 법률」 및 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」 위반에 해당할 소지가 있습니다.
+
+또한 향후 트릭컬 노트에 추가될 기능까지 고려할 경우
+비공식 앱에 권한을 부여하는 과정에서 이용자의 개인정보가 유출되어 안전하게 보호되지 않을 위험이 존재합니다.
+
+특히 교주님의 게임 정보를 기반으로 데이터가 노출되는 형태의 프로그램을
+제작/배포 중인 경우 해당 프로그램의 배포를 중단해 주시기 바랍니다.
+
+현재 확인된 비공식 프로그램은 저작권법 및 체결된 라이선스 계약 범위를 침해할 가능성이 있으며
+당사뿐 아니라 협업사 및 퍼블리셔의 권리에도 영향을 미칠 수 있는 사안입니다.
+
+이에 교주님들의 안전한 게임 이용을 위해 개발사 입장에서도 취할 수 있는 모든 조치를 준비하고 있습니다.
+
+창작 활동을 희망하시는 경우 공식 트릭컬 노트 BETA의 구조나 데이터를 활용하는 방식이 아닌
+별도의 독립적인 프로그램으로 제작하시거나 2차 창작 가이드라인 범위 내에서 진행해 주시기 바랍니다.
+
+2차 창작 가이드라인 : https://epidgames.oqupie.com/portal/2399/article/73315
+
+더불어, 비공식 프로그램 사용으로 인해 발생하는 개인정보 유출 등
+피해에 대해서는 안타깝게도 당사의 책임 범위를 벗어나는 사항입니다.
+
+트릭컬 노트 BETA는 지속적인 개선을 통해 기능을 확장할 예정이며
+향후 게임 내에서도 편리하게 이용하실 수 있도록 지원할 계획입니다.
+
+안전하고 공식적인 경로를 통해 트릭컬 노트를 이용해 주시기 바랍니다.
+감사합니다.
+
