--- a/2026/C_2026.md
+++ b/2026/C_2026.md
@@ -412,3 +412,63 @@ Q. 이 방식은 맥이나 리눅스 환경에서 지원? 발로란트는 맥 / 
 안전하고 공식적인 경로를 통해 트릭컬 노트를 이용해 주시기 바랍니다.
 감사합니다.
 
+## [nfd2nfc/docs/README.ko.md at main · elgar328/nfd2nfc · GitHub](https://github.com/elgar328/nfd2nfc/blob/main/docs/README.ko.md)
+
+NFD 파일명을 실시간으로 감지해 NFC로 변환하는 macOS 도구입니다. 다른 OS와 파일을 주고받을 때 생기는 파일명 깨짐 문제를 해결합니다.
+
+유니코드에는 한글, 악센트 문자(é, ü, ñ), 일본어(が, ぱ) 같은 조합 문자를 표현하는 두 가지 정규화 방식이 있습니다:
+
+- **NFC(Normal Form Composed)** (조합형): 하나의 코드포인트 — `가` = `U+AC00`
+- **NFD(Normal Form Decomposed)** (분해형): 기본 문자 + 결합 문자 — `가` = `U+1100 U+1161`
+
+macOS는 파일명을 NFD로 저장하지만, Windows와 Linux는 NFC를 사용합니다. 이 차이 때문에 다른 OS와 파일을 주고받으면 다음과 같은 문제가 생깁니다:
+
+- 한글이 자모로 풀어져서 표시됨 (예: 한글 → ㅎㅏㄴㄱㅡㄹ)
+- 악센트 문자가 잘못 표시되거나 정렬이 깨짐
+- Git이 같은 파일을 변경된 것으로 인식
+- 클라우드 동기화나 압축 해제 시 경로를 찾지 못함
+
+**nfd2nfc**는 TUI와 백그라운드 감시 서비스를 통해 이 문제를 자동으로 해결합니다.
+
+## [Tests Are The New Moat | Daniel Saewitz](https://saewitz.com/tests-are-the-new-moat)
+
+### 오픈소스의 성장과 구조적 한계
+
+오픈소스 프로젝트는 대개 작고 단순한 형태로 시작해 점진적으로 확장된다. 사용자가 늘어나면 기능이 추가되고, 기존 사용자들을 위해 하위 호환성이 유지된다. 이러한 과정 속에서 프로젝트는 점점 거대한 구조로 성장한다. 이것이 오랫동안 오픈소스의 강점이었다. 누구나 기여할 수 있고, 축적된 개선이 자산이 되었다.
+
+그러나 시간이 지나면 문제가 발생한다. 기반 인프라는 낡고, 구조적 부채는 쌓이며, 초기 설계의 한계가 드러난다. 프로젝트는 이미 거대한 배가 되어 방향을 틀기 어려워진다. 이를 해결하기 위해 두 가지 방식이 등장한다. 하나는 기존 코드를 기반으로 다른 길을 가는 포크(fork)이고, 다른 하나는 API 계약만 유지한 채 내부를 완전히 다시 구현하는 전면 재작성(total rewrite)이다. 예를 들어 Redpanda는 Kafka와 호환되지만 내부는 완전히 새로 작성된 사례다. 또한 S3 호환 API들이 널리 퍼진 것 역시 동일한 현상이다.
+
+### 상업적 오픈소스의 인센티브 충돌
+
+완전히 비영리적인 오픈소스 프로젝트라면 포크나 재작성은 자연스러운 흐름일 수 있다. 누군가 다른 방향으로 가더라도 본질적인 이해관계 충돌이 없다. 그러나 상업적 오픈소스는 다르다. 겉으로는 이타적 가치와 공동체 기여를 강조하지만, 동시에 기업으로서 생존과 수익이라는 현실적 인센티브를 갖고 있다.
+
+많은 기업이 장기적 신뢰를 위해 단기적 이익을 포기하기도 한다. 하지만 완전히 이타적일 수는 없다. 명확한 API와 좋은 문서, 강력한 테스트는 사용자 신뢰를 높이지만, 동시에 경쟁자가 이를 기반으로 재구현하기 쉽게 만든다. 바로 이 지점에서 긴장이 발생한다.
+
+### Cloudflare와 Next.js 사례
+
+이 현상은 Cloudflare와 Next.js 사례에서 잘 드러난다. Next.js는 오랜 시간에 걸쳐 문서화, API 계약 정의, 테스트 스위트 구축에 막대한 투자를 해왔다. 이는 사용자 신뢰를 구축하는 핵심 자산이었다.
+
+그러나 Cloudflare는 AI를 활용해 Next.js와 호환되는 대안을 빠르게 구축했다. 기존 사용자 기반이 없기 때문에 하위 호환성 부담도 없었다. 최신 API 표면만 지원하면 되었고, 내부 구현은 더 가볍고 현대적인 도구 위에 재구성할 수 있었다. 테스트 통과율 94%라는 수치는 문서 이상의 가치가 테스트에 있음을 보여준다. 말로 설명된 기능보다, 자동화된 검증 코드가 훨씬 더 강력한 재현 도구가 된 것이다.
+
+### SQLite의 선택: 테스트는 비공개
+
+흥미로운 대비 사례로 SQLite가 있다. SQLite는 핵심 엔진 코드는 오픈소스로 공개하지만, 방대한 테스트 스위트는 공개하지 않는다. 공식 문서에 따르면 테스트 코드는 수천만 줄에 달하며, 이는 핵심 소스 코드보다 훨씬 크다.
+
+이 전략은 일부에게 오픈소스 정신에 어긋나는 것으로 보일 수 있다. 그러나 다른 관점에서는 이것이 바로 프로젝트의 지속 가능성을 지키는 해자다. AI 시대에는 테스트가 곧 동작 정의서이자 품질 보증 체계이기 때문이다. 이를 공개하면 복제 비용이 급격히 낮아질 수 있다.
+
+### 새로운 해자: 테스트와 계약
+
+AI 시대에 코드 자체는 점점 상품화되고 있다. 대신 진정한 자산은 다음 세 가지로 이동한다.
+
+첫째, 명확하게 정의된 API 계약.
+둘째, 동작을 정확히 검증하는 테스트 스위트.
+셋째, 인터페이스 표면과 그 일관성.
+
+과거에는 코드를 직접 작성하고 이해하는 능력이 경쟁력이었다. 이제는 코드가 계약을 얼마나 정확히 만족하는지가 핵심이다. 그리고 그 계약을 가장 엄격하게 표현하는 것이 바로 테스트다.
+
+### 오픈소스의 미래에 대한 질문
+
+결국 상업적 오픈소스는 선택의 기로에 서 있다. API와 테스트를 완전히 공개하여 생태계를 확장할 것인가, 아니면 일부를 해자로 남겨 지속 가능성을 확보할 것인가. AI가 복제 비용을 낮출수록 이 고민은 더욱 심화될 것이다.
+
+이 글의 핵심 메시지는 단순하다.
+AI 시대에는 코드가 아니라 테스트가 가장 강력한 자산이 될 수 있다. 그리고 상업적 오픈소스는 그 사실을 점점 더 의식하게 될 것이다.
